--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+	<title>Hello Coursera!</title>
+</head>
+
+<h1> Hello Coursera! </h1>
+
+<body>
+
+</body>
+</html>
